@@ -5,8 +5,9 @@ NSD RELEASE NOTES
 BUG FIXES:
 	- Fixed problem with reload waiting very long. If the OS has a 
 	  raging herd problem, NSD could block in a UDP operation and
-	  that process would stop reload from finishing. Made UDP sockets
-	  nonblocking.
+	  that process would stop reload from finishing. Made UDP sockets 
+	  nonblocking. 
+	- Made TCP listen sockets nonblocking. NSD could block in accept.
 	- Handle the new CERT RDATA types defined in RFC 4398 (submitted by 
 	  Mans Nilsson).
 	- Fixed a bug where zonec would choke on unknown CERT RDATA types.
