@@ -1,3 +1,7 @@
+2 January 2007: Wouter
+	- Fixup accept() that could block due to already closed connection.
+	  Made listen() nonblocking, ignores errcodes that indicate closed tcp.
+
 29 January 2007: Mark
 	- Handle the new CERT RDATA types defined in RFC 4398 (submitted
 	  by Mans Nilsson).
